<resources>
    <string name="app_name">Quizzical</string>
    <string name="text_questions">Questions List</string>
    <string name="text_user">User Home</string>
    <string name="text_add_question">Add Question</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_submit">Submit</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message">Cannot be left blank</string>
    <string name="success_message">Registration Successful</string>
    <string name="success_message2">Question Added</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_question_exists">Question Already Exists</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_start">Start Quiz</string>
    <string name="text_quiz">Quiz</string>
    <string name="text_grade">Grade</string>
    <string name="text_title">Quizzical</string>
    <string name="text_question">Question</string>
    <string name="text_answer1">Answer 1</string>
    <string name="text_answer2">Answer 2</string>
    <string name="text_answer3">Answer 3</string>
    <string name="text_answer4">Answer 4</string>
    <string name="text_correct">Correct Answer</string>
    <string name="add_question">Add Question</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_account">Account</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_help">Help</string>

    <string name="text_help">
        To play the game, go back to the home screen
        and press Start Quiz. If you have any troubles
        please contact one of the creators of this app.
    </string>
</resources>
