<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textSize="30sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_add_question"
            android:textSize="24sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/text_question"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAnswer1"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAnswer1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/text_answer1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAnswer2"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutAnswer1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

        <TextView
            android:id="@+id/textViewAnswer2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/text_answer2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAnswer3"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutAnswer2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAnswer1" />

        <TextView
            android:id="@+id/textViewAnswer3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/text_answer3"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAnswer4"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutAnswer3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAnswer2" />

        <TextView
            android:id="@+id/textViewAnswer4"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/text_answer4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewCorrect"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutAnswer4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAnswer3" />

        <TextView
            android:id="@+id/textViewCorrect"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/text_correct"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutCorrect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAnswer4"
            app:layout_constraintVertical_bias="1.0" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutQuestion"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutAnswer1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewQuestion"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="100"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAnswer1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutAnswer2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAnswer1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutQuestion">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextAnswer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="100"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAnswer2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutAnswer3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAnswer2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAnswer1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextAnswer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="100"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAnswer4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCorrect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAnswer4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAnswer3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextAnswer4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="100"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAnswer3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorText"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutAnswer4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAnswer3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAnswer2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextAnswer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="100"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutCorrect"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="5dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCorrect"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAnswer4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextCorrect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="100"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/text_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAnswer4" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>